# rust-simple-server

./: Cargo.toml
src/: config.rs  main.rs
src/handlers/: mod.rs
