[package]
name = "actix-auth-service"
version = "0.1.0"
authors = ["AT"]
edition = "2018"

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
dotenv = "0.15"
config = "0.10"
serde = { version = "1.0", features = [ "derive" ] }
eyre = "0.6"
color-eyre = "0.5"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1", features = [ "env_logger" ] }  
tracing-subscriber = "0.2"